--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Tt]hird[Pp]arty/*
 [Tt]hird[Pp]arty.zip
 
+# Custom Package
+/[Aa]ssets/[Cc]ustom[Pp]ackages/*
+
 .vscode/*
 .vsconfig
 
