--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ff]urniture/*
 /[Aa]ssets/[Tt]errain[Ss]ample[Aa]ssets/*
 
+# IDEA
+.idea/
+
 .vscode/*
 .vsconfig
 
